# tcp-services

./: .gitignore  .gitmodules  README.md  aarch64-standalone.sh  buffer.ts  console.ts  deno.json  docs.d.ts  engine.ts  example.env  example.ts  example2.env  example2.ts  http-server.ts  http-server.tsx  inspect.bat  library.d.ts  local-test1.ts  localhost.crt  localhost.key  main.ts  package-lock.json  package.json  run.bat  run.ps1  run.sh  setup.bat  standalone.bat  standalone.sh  start.bat  start.sh  tcp-dump-proxy.ts  tls-proxy-test.ts
engine/: .engine.ts  buffer.ts  debug.ts  docs.d.ts  engine.ts  http-socket.ts  http2-socket.ts  lib.engine.d.ts  library.d.ts  mixer.ts  mod.ts  standard.ts  std-methods.ts  tcp-handler.ts  version.ts  websocket.ts
engine/.archive/: engine-full.ts  mod copy.ts
http/: config.json  deno.json  example.json  index.md
http/0/: index.dyn.html  style.css
http/0/aichat/: aichat.dyn.html  pre-script.js  script.js  style.css
http/0/canvas/: canvas.deno.ts
http/0/chat-room/: chat-room.deno.ts
http/0/cinfo/: cinfo.dyn.json
http/0/echo/: echo.dyn.txt
http/0/errors/: 403.dyn.html  409.dyn.html
http/0/favicon.ico/: favicon.ico.async.js
http/0/gchat/: gchat.deno.ts
http/0/google/: google.proxy.json
http/0/jslib/: input.js  jslib.async.js  pre-script.js  (+1 more)
http/70/: always.dyn.txt
http/dlo/: dlo.placeholder.html  priv.txt  style.css
http/mc/: index.html
http/new/: redirect.deno.ts
http/template/: example.deno.ts
test/: http-server.js
tls-rs/: Cargo.toml  README.md  test.ts  test2.ts
tls-rs/src/: lib.rs
(+48 files in other folders)
